Code cleanup and a little bit of refactor.